--- a/Assignment/AthleticProfile/Index.html
+++ b/Assignment/AthleticProfile/Index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <!--This is the tittle-->
-        <title>Create a Athlete Profile</title>
+        <title>Create an Athlete Profile</title>
     </head>
 
     <!--This is the body-->
