--- a/Exercises/CSS-Week 5/index.html
+++ b/Exercises/CSS-Week 5/index.html
@@ -6,18 +6,18 @@
         <title>That is my resume</title>
     </head>
     <body>
-        <h1><center>CURRICULUM VITAE</center></h1>
+        <h1><center>RESUME</center></h1>
             <ol>
                 <li>
-                    <B>PERSONAL</B>
+                    <b>PERSONAL</b>
                     <ul>
                         <li> Full Name: <b>NGUYEN THUC HAN</b></li>
                         <li> Date of birth: 17 September</li>
                         <li> Place of birth: Ho Chi Minh City - VietNam</li>
-                        <li> Address: 232 Whiteside Cres, NE, Calgary, AB</li>
-                        <li> Phone number: 778-751-6691</li>
+                        <li> Address: 2XX2 Whiteside Cres, NE, Calgary, AB</li>
+                        <li> Phone number: 778-XXX-6691</li>
                         <li> Martial Status: Single</li>
-                        <li> Email: hannt.mkt@gmail.com</li>
+                        <li> Email: hxxx.mkt@gmail.com</li>
                     </ul>
                     <br/>
                 </li>
