--- a/Assignment/Lyric Page/lyrics.html
+++ b/Assignment/Lyric Page/lyrics.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <html>
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
-    
     <title>The Lyrics Party - Talking Heads - This Must Be The Place (Naive Melody)</title>
     <meta name="description" content="This Must Be The Place (Naive Melody) Lyrics">
   
