--- a/Assignment/Lyric Page/lyrics.html
+++ b/Assignment/Lyric Page/lyrics.html
@@ -45,7 +45,7 @@
                 </section>
             </aside>
 
-            <section>
+            <section class="version1">
                 <h2>[Verse 1]</h2>
                 <p>Home is where I want to be<br>
                 Pick me up and turn me round<br>
@@ -57,7 +57,7 @@
                 It's okay, I know nothing's wrong, nothing</p>
             </section>
 
-            <section>
+            <section class="chorus">
                 <h2>[Chorus]</h2>
                 <p>Hi-yeah, I got plenty of time<br>
                 Hi-yeah, you got light in your eyes<br>
@@ -67,7 +67,7 @@
                 Cover up and say goodnight, say goodnight</p>
             </section>
 
-            <section>
+            <section class="version2">
                 <h2>[Verse 2]</h2>
                 <p>Home is where I want to be<br>
                 But I guess I'm already there<br>
@@ -79,7 +79,7 @@
                 If someone asks, this is where I'll be, where I'll be</p>
             </section>
 
-            <section>
+            <section class="chorus">
                 <h2>[Chorus]</h2>
                 <p>Hi-yeah, we drift in and out<br>
                 Hi-yeah, sing into my mouth<br>
