--- a/Assignment/Lyric Page/lyrics.html
+++ b/Assignment/Lyric Page/lyrics.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <title>The Lyrics Party - Talking Heads - This Must Be The Place (Naive Melody)</title>
     <meta name="description" content="This Must Be The Place (Naive Melody) Lyrics">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   
 </head>
 
@@ -45,7 +46,7 @@
                 </section>
             </aside>
 
-            <section class="version1">
+            <section>
                 <h2>[Verse 1]</h2>
                 <p>Home is where I want to be<br>
                 Pick me up and turn me round<br>
@@ -67,7 +68,7 @@
                 Cover up and say goodnight, say goodnight</p>
             </section>
 
-            <section class="version2">
+            <section>
                 <h2>[Verse 2]</h2>
                 <p>Home is where I want to be<br>
                 But I guess I'm already there<br>
