--- a/Assignment/G.Assig/Main/index.html
+++ b/Assignment/G.Assig/Main/index.html
@@ -75,17 +75,15 @@
     
     <footer>
         <section>
-            <h4>
-                the dandy brewing company and tasting room, 2003 11 street southeast, calagary, ab, t2g 3g6, canada.
-            </h4>
+            <img class="logo" src="images/Dandy_Brewing_Logo_White.png" alt="logo" width="70px" height="auto">
+            <h4>the dandy brewing company and tasting room, 2003 11 street southeast, calagary, ab, t2g 3g6, canada.</h4>
             <p> All rights reserved. 2020. The Dandy Brewing Company Ltd.<br>
             Photos by Arif Ansari and Chris Wideman and Matt Wickens <br>
             Powered by Squarespace
-        </p>       
+            </p>
         </section>
         
     </footer>
-
 
 </body>
 </html>
