--- a/Assignment/G.Assig/Main/index.html
+++ b/Assignment/G.Assig/Main/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <section class="top_bar">
+        <div class="top_bar">
             <img class="logo" src="images/Dandy_Brewing_Logo1_white.png" alt="logo" width="70px" height="auto">
             <nav class="top">
                 <ul class="nav_links">
@@ -26,9 +26,9 @@
                 </ul>
             </nav>
             <a class="cta" href="#"><button>Contact</button></a>
-        </section>
+        </div>
         
-        <section class="social_bar">
+        <div class="social_bar">
             <nav class="social">
                 <ul>
                     <li class="twitter">
@@ -51,7 +51,7 @@
                     </li>
                 </ul>
             </nav>
-        </section>
+        </div>
         
     </header>
 
