--- a/Assignment/G.Assig/Main/index.html
+++ b/Assignment/G.Assig/Main/index.html
@@ -60,7 +60,7 @@
         <div class="home-content">
             <img class="logo" src="images/Dandy_Brewing_Logo_white.png" alt="logo">
             <div class="content">
-                <h2> <img class="beer-cup" src="images/beer_icon_1.png" alt="beer cup">Calgary's original little brewery</h2>
+                <h2>Calgary's original little brewery</h2>
                 <p>We produce inspired ales, with lots of care.<br>
                 Our unique approach to brewing and keen eye to detail fosters creativity in both our recipes and beer styles.<br>
                 On site, we are pleased to offer a unique brewery experience featuring a full service tasting room restaurant with an exquisite menu of fine dining drinking food, a curated selection of cocktails, glass pours of selected wines, and 20 taps of Dandy beers.<br>
