--- a/Assignment/G.Assig/Story/index.html
+++ b/Assignment/G.Assig/Story/index.html
@@ -62,19 +62,41 @@
 
     <main>
         <div class="story-page-content">
-            <img class="logo" src="images/Dandy_Brewing_Logo_White.png" alt="logo squid">
-            <div class="content">
-                <p> In the fall of 2013, the Alberta Gaming and Liquor Commission made sweeping changes to the brewing industry in Alberta, allowing small craft breweries to exist. It came at a perfect time. For years Ben Leon, a teacher, and Dylan Nosal, a chef, had been growing their home-brew experience, not only in size but also in knowledge. Over the course of a few years of practice, learning, and many batches, they began brewing exceptional beers on a home-built 1BBL brewhouse.</p>
-                <p>While honing skills, the two were developing a keen taste for the growing selection of Craft beer flooding into Alberta. Much of their guidance came from Matt Gaetz, a veteran of the liquor business in Alberta, and a close friend. Between the three of them, the topic of starting something amazing often came up over beers and brewing. They knew they wanted it, they just weren't sure it was possible under old laws. Changes in law meant it was possible. </p>
-                <p>Discussion after discussion, batch after batch, ideas developed into plans. What it always boiled down to was that the brewery would have to be exciting, forward thinking, and outside the traditional thought box for breweries in the province. Exciting beer styles, quality ingredients, and attention to every detail of production.</p>
-                <p>Cue the return of Derek Waghray, a high-school friend studying chemistry on the West coast. On his return to Calgary, and with   a new found interest in brewing and craft beer, he got in touch with an old high school friend. A home brew batch later, and a discussion of wild dreams, he was added to the group. He was a much needed addition bringing expertise in laboratory process and a deep understanding of the science behind the beer.</p>
-                <p>When the laws were officially changed in December 2013, the four Dandies moved quickly to hammer out the final details for The Dandy Brewing Company. </p>
-                <p>In January 2014 the Dandy Brewing Company was incorporated. April 2014 the lease was signed. June 2014 the brewhouse was built. August 2014 the brewing began. September 2014 the beer hit the shelves. April 2015 the first draught accounts started pouring. November 2015 the Tap Room opened. January 2016 a three-fold expansion of capacity was completed.</p>
-                <p>April 2018 saw the opening of the The Dandy Brewing Company and Tasting Room, a new production facility and full service tasting room located in the heart of Ramsay, Calgary. Fine Dining drinking food. Dandy beers. Cocktails. wine. The full Dandy experience.</p>
+            <img class="icon" src="images/beer_barrel.png" alt="beer icon">
+            <div class="container">
+                <div class="story-page-content">
+                <!--The text want to show-->
+                    <p> In the fall of 2013, the Alberta Gaming and Liquor Commission made sweeping changes to the brewing industry in Alberta, allowing small craft breweries to exist. It came at a perfect time. For years Ben Leon, a teacher, and Dylan Nosal, a chef, had been growing their home-brew experience, not only in size but also in knowledge. Over the course of a few years of practice, learning, and many batches, they began brewing exceptional beers on a home-built 1BBL brewhouse.</p>
+                <!--The text want to hide-->
+                    <span class="dots">....</span>
+                        <br>
+                <span class="more"> 
+                    <p>While honing skills, the two were developing a keen taste for the growing selection of Craft beer flooding into Alberta. of their guidance came from Matt Gaetz, a veteran of the liquor business in Alberta, and a close friend. Between the three of them, the topic of starting something amazing often came up over beers and brewing. They knew they wanted it, they just weren't sure it was possible under old laws. Changes in law meant it was possible. </p>
+                    <p>Discussion after discussion, batch after batch, ideas developed into plans. What it always boiled down to was that the brewery would have to be exciting, forward thinking, and outside the traditional thought box for breweries in the province. Exciting beer styles, quality ingredients, and attention to every detail of production.</p>
+                    <p>Cue the return of Derek Waghray, a high-school friend studying chemistry on the West coast. On his return to Calgary, and with   a new found interest in brewing and craft beer, he got in touch with an old high school friend. A home brew batch later, and a discussion of wild dreams, he was added to the group. He was a much needed addition bringing expertise in laboratory process and a deep understanding of the science behind the beer.</p>
+                    <p>When the laws were officially changed in December 2013, the four Dandies moved quickly to hammer out the final details for The Dandy Brewing Company. </p>
+                    <p>In January 2014 the Dandy Brewing Company was incorporated. April 2014 the lease was signed. June 2014 the brewhouse was built. August 2014 the brewing began. September 2014 the beer hit the shelves. April 2015 the first draught accounts started pouring. November 2015 the Tap Room opened. January 2016 a three-fold expansion of capacity was completed.</p>
+                    <p>April 2018 saw the opening of the The Dandy Brewing Company and Tasting Room, a new production facility and full service tasting room located in the heart of Ramsay, Calgary. Fine Dining drinking food. Dandy beers. Cocktails. wine. The full Dandy experience.</p>
+                    </span>
+                    <button class="read-more-button">Read more</button> 
+                </div>
+                <div class="image1"></div>
+                <div class="image2"></div>
+                <div class="image3"></div>
             </div>
-            <img class="logo" src="images/Dandy_Brewing_Logo_white.png" alt="logo squid">
         </div>        
     </main>
+    <footer>
+        <section>
+            <img class="logo" src="images/Dandy_Brewing_Logo_White.png" alt="logo" width="60px" height="auto">
+            <h4>the dandy brewing company and tasting room, 2003 11 street southeast, calagary, ab, t2g 3g6, canada.</h4>
+            <p> All rights reserved. 2020. The Dandy Brewing Company Ltd.<br>
+            Photos by Arif Ansari and Chris Wideman and Matt Wickens <br>
+            Powered by Squarespace
+            </p>
+        </section>
+        
+    </footer>
     
 </body>
 </html>
