update link social media

--- a/Assignment/G.Assig/Main/index.html
+++ b/Assignment/G.Assig/Main/index.html
@@ -32,22 +32,22 @@
             <nav class="social">
                 <ul>
                     <li class="twitter">
-                        <a href="#"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/dandyalesyyc?lang=en"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
                     </li>
                 </ul>
                 <ul>
                     <li class="facebook">
-                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/dandyalesyyc/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </li>
                 </ul>
                 <ul>
                     <li class="instagram">
-                        <a href="#"> <i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/dandyalesyyc/?hl=en"> <i class="fa fa-instagram" aria-hidden="true"></i></a>
                     </li>
                 </ul>
                 <ul>
                     <li class="youtube">
-                        <a href="#"> <i class="fa fa-youtube" aria-hidden="true"></i></a>
+                        <a href="https://www.youtube.com/watch?v=QMi0i5keZ4I"> <i class="fa fa-youtube" aria-hidden="true"></i></a>
                     </li>
                 </ul>
             </nav>
