--- a/Assignment/G.Assig/Main/index.html
+++ b/Assignment/G.Assig/Main/index.html
@@ -76,10 +76,8 @@
         <section>
             <img class="logo-squid" src="images/Dandy_Brewing_Logo_Black.png" alt="logo-squid">
             <h4>the dandy brewing company and tasting room, 2003 11 street southeast, calagary, ab, t2g 3g6, canada.</h4>
-            <p> All rights reserved. 2020. The Dandy Brewing Company Ltd.<br>
-            Photos by Arif Ansari and Chris Wideman and Matt Wickens <br>
-            Powered by Squarespace
-            </p>
+            <p> All rights reserved. 2020. The Dandy Brewing Company Ltd.</p>
+            <p>Photos by Arif Ansari and Chris Wideman and Matt Wickens.</p>
         </section>
     </footer>
 
